# CSE-518-The_Vulwitch_Trials

./: README.md  ast_dump.py  ast_main.py  dataCleaning.py  main.py  modelTraining.ipynb  pyproject.toml  safe.c  test.py  unsafe.c
Juliet_Dataset_Model/: analyze_code.py  juliet_data_processor.py  manage_feedback.py  manage_feedback_simple.py  realtime_metrics.py  train_codet5_juliet.py  training_automation.py
Juliet_Dataset_Model/output/: added_tokens.json  combined_training_data.jsonl  config.json  evaluation_results.json  juliet_training_data.jsonl  juliet_training_data_test.jsonl  retrain_evaluation_results.json  tokenizer_config.json
Juliet_Dataset_Model/output/juliet_codet5_model/: added_tokens.json  retrain_evaluation_results.json  tokenizer_config.json
Juliet_Dataset_Model/output/juliet_codet5_model/checkpoint-146/: config.json  model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
Juliet_Dataset_Model/output/juliet_codet5_model/checkpoint-435/: model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  tokenizer.json  tokenizer_config.json  trainer_state.json
Juliet_Dataset_Model/output/juliet_codet5_model/checkpoint-453/: added_tokens.json  config.json  generation_config.json  model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  tokenizer.json  tokenizer_config.json  (+1 more)
attack/: generate_possible_generation.py  passwords.txt  usernames.txt
doc/: deliverable-2-2.html  deliverable-2-2.md  proposal.md  proposal_v0.md
vul_witch/ast/: error.py  location.py  node.py  parser.py  type.py
(+3 files in other folders)
